# Institutional-memory-bot

./: .replit  .wiki_last_fetch  README.md  app.py  auto_updater.py  chat_sessions.db  chat_sessions.py  config.py  contextual_list.md  document_processor.py  gemini_client.py  github_crawler.py  ingest.py  logger.py  pyproject.toml  reset.py  vector_store.py  wiki_auto_refresh.py  wiki_crawler.py
attached_assets/: institutional_memory_1756823776395.md
chroma_db/: chroma.sqlite3
data/: jboss_restart.md
logs/: queries.json
